--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rossedman/teamwork",
+    "name": "johnrich85/teamwork",
     "description": "PHP wrapper for the Teamwork project management API",
     "keywords": ["teamwork", "api", "laravel", "project management"],
     "license": "MIT",
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "~5.2"
+        "guzzlehttp/guzzle": "~6.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
