--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Ross Edman",
-            "email": "ross.edman@gmail.com"
+            "name": "John Richardson",
+            "email": "mail@john-richardson.net"
         }
     ],
     "require": {
